# meetbouten

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  Meetbouten-outline.drawio  README.md  compose.override.yml.example  compose.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_linting.txt
.github/: dependabot.yml
.github/workflows/: dependabot-slack-notification.yml  dependabot.yml  linting.yml  run-tests.yml
deploy/: diff.py  docker-run.sh
manifests/: configmap.yaml  db.deployment.yaml  deployment.yaml  values.yaml
manifests/env/: acc.yaml  dev.yaml  local.yaml  prod.yaml  test.yaml
pipeline/: aks.yaml
src/: settings.py
src/admin_chart/: admin.py
src/bouwblokken/: actions.py  admin.py  factories.py  models.py
src/bouwblokken/migrations/: 0001_initial.py
src/constanten/: admin.py  models.py
src/constanten/migrations/: 0001_initial.py  0002_seed_static_tables.py
src/main/: asgi.py  auth.py  settings.py  urls.py  uwsgi.ini  wsgi.py
src/meetbouten/: admin.py  apps.py  factories.py  models.py  urls.py
src/meetbouten/migrations/: 0001_initial.py  0002_meetbout_picture.py
src/metingen/: actions.py  admin.py  apps.py  cor_loader.py  factories.py  form.py  formatters.py  hoogtepunt_nummer_generator.py  models.py  resource.py  tco_loader.py  urls.py  views.py  widgets.py
src/metingen/files/: kaartbladen.csv
src/metingen/migrations/: 0001_initial.py  0002_alter_metrefpuntenherz_meting.py  0003_auto_20230215_1456.py  0004_createcachetable.py  0005_auto_20230228_1030.py  0006_hoogtepunt_picture.py  0007_auto_20230321_1154.py  0007_metingverrijking.py  0008_merge_0007_auto_20230321_1154_0007_metingverrijking.py  0009_metingverrijking_file_name.py  0010_auto_20230406_1208.py  0011_alter_grondslagpunt_bron_alter_grondslagpunt_type_and_more.py  0012_alter_metingherzien_options.py  0013_alter_hoogtepunt_status.py
src/referentie_tabellen/: admin.py  models.py  referentie_waardes.py
src/referentie_tabellen/migrations/: 0001_initial.py  0002_seed_static_tables.py
tests/: pytest.ini
tests/admin_chart/: test_admin.py  test_pg_upload.py
tests/bouwblokken/: test_actions.py
tests/metingen/: kaartbladen-test.csv  test_actions.py  test_cor_loader.py  test_formatters.py  test_hoogtepunt_nummer_generator.py  test_invalid.py  test_resource.py  test_tco_loader.py
tests/move3_files/: metingen1.cor  metingen2.cor  metingen3.cor  raw.tco  verrijkt.tco
(+11 files in other folders)
