[project]
name = "meetbouten"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dynamic = ["version"]

[tool.black]
# Default is 88
line-length = 88
# Black will default to double quotes
skip-string-normalization = true
exclude = 'migrations|urls.py|tests|settings.py'

[tool.isort]
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true

[tool.pytest.ini_options]
markers = [
    "migration: mark a test as a migration test"
]
addopts = "-v -s --ff --nf --cov --cov-report term-missing --cov-config /app/pyproject.toml"

[tool.coverage.run]
source = [".", "/app/src"]
omit = [
    "/app/tests",
    "/app/src/main/wsgi.py",
    "/app/src/main/settings.py",
    "/app/src/main/urls.py",
    "/app/src/manage.py",
    "/app/src/main/asgi.py",
    "/app/src/main/auth.py",
    "*/apps.py",
    "*/models.py",
    "/app/src/metingen/management/commands/load_csv_data.py",
]

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
sort = "Cover"
