[project]
name = "meetbouten"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dynamic = ["version"]

[tool.black]
# Default is 88
line-length = 88
# Black will default to double quotes
skip-string-normalization = true
exclude = 'migrations|urls.py|tests|settings.py'

[tool.pytest.ini_options]
markers = [
    "migration: mark a test as a migration test"
]
addopts = "-v -s --ff --nf --cov --cov-report term-missing --cov-config /app/pyproject.toml"

[tool.coverage.run]
source = [".", "/app/src"]
omit = [
    "/app/tests",
    "/app/src/main/wsgi.py",
    "/app/src/main/settings.py",
    "/app/src/main/urls.py",
    "/app/src/manage.py",
    "/app/src/main/asgi.py",
    "/app/src/main/auth.py",
    "*/apps.py",
    "*/models.py",
    "/app/src/metingen/management/commands/load_csv_data.py",
]

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
sort = "Cover"

[tool.ruff]
line-length = 88
extend-exclude = [
    "*/migrations/*",
    "*/urls.py",
    "*/tests/*",
    "*/settings.py",
]

[tool.ruff.lint]
ignore = ["E101", "E501", "E722", "E731", "F403", "F405", "F811", "F841", "W191", "W291"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (autoflake uses this)
    "I",   # isort
]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"src/main/settings.py" = ["E402"]
